--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "postbuild": "cp -r ./dist ./public"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
