--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
-    "outputDirectory": "dist"
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "src/server.ts", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "src/server.ts" }
+  ]
+}
