--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.14.2",
     "@vercel/postgres": "^0.8.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.11.5",
