--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "build": "tsc"
   },
   "devDependencies": {
@@ -15,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/validator": "^13.11.10",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
