--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "sweetalert2": "^11.11.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "zod": "^3.23.8"
   }
 }
