--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
     "@vercel/postgres": "^0.9.0",
-    "ws": "^8.17.1",
     "Validator": "^1.1.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -38,11 +37,11 @@
     "reflect-metadata": "^0.2.2",
     "sweetalert2": "^11.11.0",
     "typeorm": "^0.3.20",
+    "validator": "^13.12.0",
+    "ws": "^8.17.1",
     "zod": "^3.23.8"
-    
   },
   "resolutions": {
     "ws": "^8.17.1"
   }
-  
 }
