--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
-    "sweetalert2": "^11.11.0",
     "typeorm": "^0.3.20",
     "validator": "^13.12.0",
-    "ws": "^8.17.1",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "resolutions": {
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "validator": "^13.7.0"
   }
 }
