--- a/package.json
+++ b/package.json
@@ -3,29 +3,33 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:AlexsandroVcT/gaviaofrutas.git",
-  "author": "AlexsandroVct <alexsandro.vct@outlook.com>",
+  "author": "AlexsandroVct",
   "license": "MIT",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "ts-node-dev src/server.ts",
-    "build": "tsc"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start:ts": "ts-node src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "typecheck": "tsc --noEmit",
+    "check": "yarn typecheck",
+    "prestart": "yarn build",
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
     "@types/validator": "^13.11.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@nestjs/typeorm": "^10.0.2",
-    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.2",
     "@vercel/postgres": "^0.9.0",
-    "Validator": "^1.1.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -41,7 +45,12 @@
     "zod": "^3.23.8"
   },
   "resolutions": {
-    "ws": "^8.17.1",
-    "validator": "^13.7.0"
-  }
+    "ws": "^8.18.0",
+    "validator": "^13.12.0"
+  },
+  "overrides": {
+    "ws": "^8.18.0",
+    "validator": "^13.12.0"
+  },
+  "packageManager": "yarn@1.22.22"
 }
