--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "src/server.ts", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "src/server.ts" }
+  "functions": {
+    "api/index.ts": {
+      "runtime": "nodejs22.x"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/index"
+    }
   ]
-   
 }
