feat(nuxt): redesign clean com dark mode e integração da home com API

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,2 +1,2 @@
 NUXT_PUBLIC_SITE_URL=https://gaviaofrutas.com.br
-NUXT_PUBLIC_API_BASE=https://gaviaofrutas.com.br
+NUXT_PUBLIC_API_BASE=http://localhost:3333
